--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,6 @@
     <string name="temp_scale_key" translatable="false">temp_scale</string>
     <string name="daily_weather_notification_key" translatable="false">daily_weather_notification</string>
     <string name="location_not_available">Location not available</string>
+    <string name="todays_weather">Today\'s weather</string>
+    <string name="weather_channel_name">Weather</string>
 </resources>
