--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="location_not_available">Location not available</string>
     <string name="todays_weather">Today\'s weather</string>
     <string name="weather_channel_name">Weather</string>
+    <string name="retry">retry</string>
 </resources>
