--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="meter_second">meter/second</string>
     <string name="miles_hour">miles/hour</string>
     <string name="location_permission_rationale">To get Local weather, allow location permission in the Settings</string>
+    <string name="allow_location_access">Allow Location Access</string>
 </resources>
